--- a/blogs.html
+++ b/blogs.html
@@ -186,58 +186,19 @@
         <div class="th-menu-area text-center">
             <button class="th-menu-toggle"><i class="fal fa-times"></i></button>
             <div class="mobile-logo">
-                <a href="home-organic-farm.html"><img src="assets/img/logo.svg" alt="Frutin"></a>
+                <a href="/"><img src="assets/img/ec-logo2.png" alt="Eco-Cleanser"></a>
             </div>
             <div class="th-mobile-menu">
                 <ul>
-                    <li class="menu-item-has-children">
-                        <a href="home-organic-farm.html">Home</a>
-                        <ul class="sub-menu">
-                            <li><a href="home-organic-farm.html">Organic Farm</a></li>
-                            <li><a href="home-organic-food.html">Organic Food</a></li>
-                            <li><a href="home-mega-shop.html">Mega Shop</a></li>
-                            <li><a href="home-organic-farming.html">Organic Farming</a></li>
-                        </ul>
+                    <li class="">
+                        <a href="/">Home</a>
                     </li>
                     <li><a href="about.html">About Us</a></li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Service</a>
-                        <ul class="sub-menu">
-                            <li><a href="service.html">Service</a></li>
-                            <li><a href="service-details.html">Service Details</a></li>
-                        </ul>
+                    <li class="">
+                        <a href="products.html">Products</a>
                     </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Pages</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item-has-children">
-                                <a href="#">Shop</a>
-                                <ul class="sub-menu">
-                                    <li><a href="shop.html">Shop</a></li>
-                                    <li><a href="shop-details.html">Shop Details</a></li>
-                                    <li><a href="cart.html">Cart Page</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
-                                    <li><a href="wishlist.html">Wishlist</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="team.html">Team</a></li>
-                            <li><a href="team-details.html">Team Details</a></li>
-                            <li><a href="project.html">Project Gallery</a></li>
-                            <li><a href="project-details.html">Project Details</a></li>
-                            <li><a href="faq.html">Faq Page</a></li>
-                            <li><a href="error.html">Error Page</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Blog</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
+                    <li class="">
+                        <a href="blogs.html">Blogs</a>
                 </ul>
             </div>
         </div>
@@ -278,7 +239,7 @@
                         <div class="row align-items-center justify-content-between">
                             <div class="col-auto">
                                 <div class="header-logo">
-                                    <a href="home-organic-farm.html"><img src="assets/img/logo-white.svg" alt="Frutin"></a>
+                                    <a href="index.html"><img src="assets/img/ec-logo2.png" alt="Eco-Cleanser"></a>
                                 </div>
                             </div>
                             <div class="col-auto">
@@ -304,7 +265,7 @@
                                         <span class="badge">5</span>
                                         <i class="fa-regular fa-cart-shopping"></i>
                                     </button>
-                                    <a href="contact.html" class="th-btn style4">Get A Quote<i class="fas fa-chevrons-right ms-2"></i></a>
+                                    <a href="contact.html" class="th-btn">Get A Quote<i class="fas fa-chevrons-right ms-2"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -509,20 +470,21 @@
         <div class="container z-index-common">
             <div class="newsletter-wrap">
                 <div class="newsletter-content">
-                    <h4 class="newsletter-title">Sign Up to Get Updates & News About Us.</h4>
+                    <h4 class="newsletter-title">Make Your Furry Friend Safe and Clean.</h4>
                 </div>
-                <form class="newsletter-form">
-                    <div class="form-group">
+                <form class="">
+                    <!-- <div class="form-group">
                         <input class="form-control" type="email" placeholder="Email Address" required="">
-                    </div>
-                    <button type="submit" class="th-btn style6">Subscribe</button>
+                    </div> -->
+                    <button type="submit" class="th-btn style6">Shop Now on Amazon</button>
+                    <button type="submit" class="th-btn style6">Blogs</button>
                 </form>
             </div>
         </div>
     </div>
-    <footer class="footer-wrapper footer-layout2">
-        <div class="shape-mockup" data-top="0" data-left="0"><img src="assets/img/shape/footer_shape_1.png" alt="shape"></div>
-        <div class="shape-mockup" data-bottom="0" data-right="0"><img src="assets/img/shape/footer_shape_2.png" alt="shape"></div>
+    <footer class="footer-wrapper footer-layout2" style="background-image: url(&quot;assets/img/bg/footer_bg_1.jpg&quot;);">
+        <!-- <div class="shape-mockup" data-top="0" data-left="0"><img src="assets/img/shape/footer_shape_1.png" alt="shape"></div> -->
+        <!-- <div class="shape-mockup" data-bottom="0" data-right="0"><img src="assets/img/shape/footer_shape_2.png" alt="shape"></div> -->
         <!-- <div class="container z-index-common">
             <div class="newsletter-wrap">
                 <div class="newsletter-content">
@@ -546,9 +508,9 @@
                         <div class="widget footer-widget">
                             <div class="th-widget-about">
                                 <div class="about-logo">
-                                    <a href="home-organic-farm.html"><img src="assets/img/logo-footer.svg" alt="Frutin"></a>
+                                    <a href="home-organic-farm.html"><img src="assets/img/ec-logo2.png" alt="Eco-Cleanser"></a>
                                 </div>
-                                <p class="about-text">We provide specialized winterization services to safeguard your pool during the off-season, and when spring arrives, we handle the thorough opening process.</p>
+                                <p class="about-text">Eco Cleanser is a pet wellness brand devoted to clean, green, and gentle care. We create eco-friendly grooming products that are safe for pets, kind to the planet, and made with love.</p>
                                 <div class="th-social">
                                     <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
                                     <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a>
@@ -560,35 +522,32 @@
                     </div>
                     <div class="col-md-6 col-xl-auto">
                         <div class="widget widget_nav_menu footer-widget">
-                            <h3 class="widget_title"><img src="assets/img/theme-img/title_icon.svg" alt="Icon">Categories</h3>
+                            <h3 class="widget_title"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="Icon">Products</h3>
                             <div class="menu-all-pages-container">
                                 <ul class="menu">
-                                    <li><a href="shop.html">Fresh Vegetable</a></li>
-                                    <li><a href="shop.html">Natural Fruits</a></li>
-                                    <li><a href="shop.html">Dairy Products</a></li>
-                                    <li><a href="shop.html">Tea & Coffee</a></li>
-                                    <li><a href="shop.html">Meat and Fish</a></li>
+                                    <li><a href="shop.html">Pet Shampo</a></li>
+                                    <li><a href="shop.html">Pet Soap</a></li>
+                                    <li><a href="shop.html">Kennal Wash</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-auto">
                         <div class="widget widget_nav_menu footer-widget">
-                            <h3 class="widget_title"><img src="assets/img/theme-img/title_icon.svg" alt="Icon">Quick Links</h3>
+                            <h3 class="widget_title"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="Icon">Quick Links</h3>
                             <div class="menu-all-pages-container">
                                 <ul class="menu">
+                                    <li><a href="faq.html">Home</a></li>
                                     <li><a href="about.html">About Us</a></li>
-                                    <li><a href="project.html">Portfolio</a></li>
-                                    <li><a href="faq.html">Help & FAQs</a></li>
+                                    <li><a href="project.html">Products</a></li>
                                     <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-auto">
                         <div class="widget footer-widget">
-                            <h3 class="widget_title"><img src="assets/img/theme-img/title_icon.svg" alt="Icon">Contact Us</h3>
+                            <h3 class="widget_title"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="Icon">Contact Us</h3>
                             <div class="th-widget-contact">
                                 <div class="info-box">
                                     <div class="info-box_icon">
@@ -602,7 +561,6 @@
                                     </div>
                                     <p class="info-box_text">
                                         <a href="tel:+16326543564" class="info-box_link">+(163)-2654-3564</a>
-                                        <a href="tel:+16326545432" class="info-box_link">+(163)-2654-5432</a>
                                     </p>
                                 </div>
                                 <div class="info-box">
@@ -610,7 +568,7 @@
                                         <i class="fas fa-envelope"></i>
                                     </div>
                                     <p class="info-box_text">
-                                        <a href="mailto:help24/7@frutin.com" class="info-box_link">help24/7@frutin.com</a>
+                                        <a href="mailto:help24/7@frutin.com" class="info-box_link">abc@gmail.com</a>
                                     </p>
                                 </div>
                             </div>
@@ -623,7 +581,7 @@
             <div class="container">
                 <div class="row gy-2 align-items-center">
                     <div class="col-md-6">
-                        <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2024 <a href="home-organic-farm.html">Frutin</a>. All Rights Reserved.</p>
+                        <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2025 <a href="">Eco-Cleanser</a>. All Rights Reserved.</p>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="payment-img">
