--- a/about.html
+++ b/about.html
@@ -302,23 +302,23 @@
                             <img src="assets/img/normal/about_3_2.png" alt="About">
                         </div>
                         <div class="img1">
-                            <img src="assets/img/normal/bottle3.png" alt="About">
+                            <img src="assets/img/product/all1.png" alt="About">
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-6 text-center text-xl-start">
                     <div class="title-area mb-32">
-                        <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="shape">About Us</span>
-                        <h2 class="sec-title">Organic Integrity Durable Impact Frutin's Story</h2>
-                        <p class="sec-text">Some studies suggest that organic foods may have higher levels of certain nutrients and antioxidants compared to conventionally grown foods. However, this can vary depending on factors like soil quality and growing conditions.</p>
+                        <span class="sub-title"><img src="assets/img/icon/pets.svg" alt="shape">About Us</span>
+                        <h2 class="sec-title">Naturally Clean, Genuinely Caring – The Eco Cleanser Story</h2>
+                        <p class="sec-text">We believe that pet care should be as pure and loving as the bond you share with your furry companions. Our journey began with a simple mission: to create eco-friendly grooming products that are safe for pets, kind to the planet, and made with nature’s best. <br>
+                            Our products are crafted with natural ingredients like neem, aloe vera, coconut oil, and essential plant extracts—free from harmful chemicals, synthetic fragrances, and artificial dyes. We’re proud to support a clean lifestyle for your pets, from bath time to bedtime.</p>
                     </div>
                     <div class="checklist list-two-column mb-40">
                         <ul>
-                            <li>100% Organic Products</li>
-                            <li>No Synthetic Chemicals</li>
-                            <li>Always Fresh & Natural Foods</li>
-                            <li>Best Prices</li>
-                            <li>Environmental Benefits</li>
+                            <li>100% Natural & Organic Ingredients</li>
+                            <li>No Harsh Chemicals or Sulfates</li>
+                            <li>Eco-Friendly, Biodegradable Packaging</li>
+                            <li>Vet-Approved Formulas for All Breeds</li>
                         </ul>
                     </div>
                     <div>
@@ -341,10 +341,10 @@
                             <div class="category-card">
                                 <div class="box-shape" data-bg-src="assets/img/bg/category_card_bg.png"></div>
                                 <div class="box-icon" data-mask-src="assets/img/bg/category_card_icon_bg.png">
-                                    <img src="assets/img/icon/category_card_1.svg" alt="Image">
+                                    <img src="assets/img/icon/pets.svg" alt="Image">
                                 </div>
                                 <h3 class="box-title"><a href="shop.html">Mision</a></h3>
-                                <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
+                                <p class="box-subtitle">To provide pet parents with safe, sustainable, and natural grooming solutions that protect both their pets and the environment. Compassion for animals, environmental responsibility, ingredient transparency.</p>
                             </div>
                         </div>
                     </div>
@@ -353,10 +353,10 @@
                             <div class="category-card">
                                 <div class="box-shape" data-bg-src="assets/img/bg/category_card_bg.png"></div>
                                 <div class="box-icon" data-mask-src="assets/img/bg/category_card_icon_bg.png">
-                                    <img src="assets/img/icon/category_card_2.svg" alt="Image">
+                                    <img src="assets/img/icon/dog-face.svg" alt="Image">
                                 </div>
                                 <h3 class="box-title"><a href="shop.html">Vison</a></h3>
-                                <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
+                                <p class="box-subtitle">To become the most trusted eco-conscious pet care brand globally, promoting wellness and clean living for every tail-wagger. Compassion for animals, environmental responsibility, ingredient transparency.</p>
                             </div>
                         </div>
                     </div>
@@ -365,10 +365,10 @@
                             <div class="category-card">
                                 <div class="box-shape" data-bg-src="assets/img/bg/category_card_bg.png"></div>
                                 <div class="box-icon" data-mask-src="assets/img/bg/category_card_icon_bg.png">
-                                    <img src="assets/img/icon/category_card_3.svg" alt="Image">
+                                    <img src="assets/img/icon/paw-prints.svg" alt="Image">
                                 </div>
                                 <h3 class="box-title"><a href="shop.html">Values</a></h3>
-                                <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
+                                <p class="box-subtitle">Compassion for animals, environmental responsibility, ingredient transparency, and continuous innovation. Compassion for animals, environmental responsibility, ingredient transparency, and continuous innovation.</p>
                             </div>
                         </div>
                     </div>
@@ -395,7 +395,7 @@
                     </div>
                     <div class="media-body">
                         <h2 class="box-number"><span class="counter-number">15663</span>+</h2>
-                        <p class="box-text">Our Total Products</p>
+                        <p class="box-text">Products Shipped Across the Country</p>
                     </div>
                 </div>
                 <div class="divider"></div>
@@ -415,7 +415,7 @@
                     </div>
                     <div class="media-body">
                         <h2 class="box-number"><span class="counter-number">2365</span>+</h2>
-                        <p class="box-text">Satisfied Customers</p>
+                        <p class="box-text">Happy Pet Families</p>
                     </div>
                 </div>
                 <div class="divider"></div>
@@ -442,10 +442,10 @@
                 <div class="col-xl-6 mb-30 mb-xl-0">
                     <div class="img-box1">
                         <div class="img1">
-                            <img src="assets/img/normal/dog1.jpg" alt="About">
+                            <img src="assets/img/normal/bath.png" alt="About">
                         </div>
                         <div class="img2">
-                            <img src="assets/img/normal/bottle2.webp" alt="Image">
+                            <img src="assets/img/product/a" alt="Image">
                         </div>
                         <!-- <div class="shape1 movingX">
                             <img src="assets/img/normal/about_1_3.png" alt="Image">
@@ -459,22 +459,22 @@
                 <div class="col-xl-6">
                     <div class="ps-xxl-5 ps-xl-2 ms-xl-1 text-center text-xl-start">
                         <div class="title-area mb-32">
-                            <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="shape">Why Eco Cleanser</span>
-                            <h2 class="sec-title">Eating Right Start With Organic Food</h2>
-                            <p class="sec-text">Organic foods are produced through a farming system that avoids the use of synthetic pesticides, herbicides, genetically modified organism (GMOs), and artificial fertilizers. Instead, organic farmers rely on natural methods like crop rotation. composting, and biological pest control.</p>
+                            <span class="sub-title"><img src="assets/img/icon/pets.svg" alt="shape">Why Eco Cleanser</span>
+                            <h2 class="sec-title">A Fresh Start With Every Wash</h2>
+                            <p class="sec-text">We take pride in sourcing our ingredients from certified organic farms, ensuring every bottle delivers gentle cleansing, deep nourishment, and zero compromise. Our products are handcrafted with care to maintain the highest standards of pet wellness. <br> Say goodbye to irritation, flakes, and chemical residues. Our shampoos, soaps, and kennel washes are designed to soothe, soften, and shine—naturally.</p>
                         </div>
                         <div class="about-feature-wrap">
                             <div class="about-feature">
-                                <div class="box-icon">
-                                    <img src="assets/img/icon/about_feature_1.svg" alt="Icon">
-                                </div>
-                                <h3 class="box-title">The Agriculture Leader</h3>
+                                <!-- <div class="box-icon">
+                                    <img src="assets/img/icon/paw-prints.svg" alt="Icon">
+                                </div> -->
+                                <h3 class="box-title"></h3>
                             </div>
                             <div class="about-feature">
-                                <div class="box-icon">
+                                <!-- <div class="box-icon">
                                     <img src="assets/img/icon/about_feature_2.svg" alt="Icon">
-                                </div>
-                                <h3 class="box-title">Smart Organic Solutions</h3>
+                                </div> -->
+                                <h3 class="box-title"></h3>
                             </div>
                         </div>
                         <div>
@@ -489,12 +489,12 @@
     <!--==============================
     Service Area  
     ==============================-->
-    <section class="overflow-hidden bg-smoke2 space incredient mt-5" id="service-sec" data-bg-src="assets/img/bg/service_bg_1.png">
+    <section class="overflow-hidden mb-100 incredient mt-5" id="service-sec">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-7">
                     <div class="title-area text-center">
-                        <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="Icon">Why Eco-Cleanser</span>
+                        <span class="sub-title"><img src="assets/img/icon/pets.svg" alt="Icon">What’s Inside Eco Cleanserr</span>
                         <h2 class="sec-title">Why Eco-Cleanser formula is different</h2>
                     </div>
                 </div>
@@ -510,7 +510,7 @@
                         </div>
                         <div class="box-content">
                             <h3 class="box-title"><a href="service-details.html">Oatmeal-Aloe Vera</a></h3>
-                            <p class="box-text">Inspections to ensure compliance with organic standards.</p>
+                            <p class="box-text">Soothes itchy skin and hydrates dry coats for a soft, healthy shine.</p>
                         </div>
                         <!-- <a href="service-details.html" class="icon-btn"><i class="far fa-arrow-right"></i></a> -->
                     </div>
@@ -525,7 +525,7 @@
                         </div>
                         <div class="box-content">
                             <h3 class="box-title"><a href="service-details.html">Apple Cider Vinegar</a></h3>
-                            <p class="box-text">Inspections to ensure compliance with organic standards.</p>
+                            <p class="box-text">Restores pH balance and helps manage odors naturally.</p>
                         </div>
                         <!-- <a href="service-details.html" class="icon-btn"><i class="far fa-arrow-right"></i></a> -->
                     </div>
@@ -539,8 +539,8 @@
                             <img src="assets/img/icon/service_card_3.svg" alt="Icon">
                         </div>
                         <div class="box-content">
-                            <h3 class="box-title"><a href="service-details.html">Vitamin E</a></h3>
-                            <p class="box-text">Inspections to ensure compliance with organic standards.</p>
+                            <h3 class="box-title"><a href="service-details.html">Vitamin E Boost</a></h3>
+                            <p class="box-text">Protects skin, strengthens fur, and promotes healing.</p>
                         </div>
                         <!-- <a href="service-details.html" class="icon-btn"><i class="far fa-arrow-right"></i></a> -->
                     </div>
