--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </div>
     <div class="popup-search-box d-none d-lg-block">
         <button class="searchClose"><i class="fal fa-times"></i></button>
-        <form action="#">
+        <form action="products.html">
             <input type="text" placeholder="What are you looking for?">
             <button type="submit"><i class="fal fa-search"></i></button>
         </form>
@@ -278,14 +278,14 @@
     <!--==============================
     Hero Area
     ==============================-->
-    <div class="th-hero-wrapper hero-2 scaled-wrapper" id="hero" data-bg-src="assets/img/hero/hero_bg_2_1.jpg">
+    <div class="th-hero-wrapper hero-2 scaled-wrapper" id="hero" data-bg-src="assets/img/hero/bnr.webp">
         <div class="swiper th-slider" id="heroSlider2" data-slider-options='{"effect":"fade"}'>
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="hero-inner">
                         <div class="container">
                             <div class="hero-style2">
-                                <span class="sub-title" data-ani="slideinup" data-ani-delay="0.2s"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="shape">100% Natural</span>
+                                <span class="sub-title text-white" data-ani="slideinup" data-ani-delay="0.2s"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="shape">100% Natural</span>
                                 <h1 class="hero-title">
                                     <span class="title1" data-ani="slideinup" data-ani-delay="0.4s">Our Organic</span>
                                     <span class="title2" data-ani="slideinup" data-ani-delay="0.5s">Collection.</span>
@@ -319,7 +319,7 @@
                     <div class="hero-inner">
                         <div class="container">
                             <div class="hero-style2">
-                                <span class="sub-title" data-ani="slideinup" data-ani-delay="0.2s"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="shape">100% Naturals</span>
+                                <span class="sub-title text-white" data-ani="slideinup" data-ani-delay="0.2s"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="shape">100% Naturals</span>
                                 <h1 class="hero-title">
                                     <span class="title1" data-ani="slideinup" data-ani-delay="0.4s">Our Organic</span>
                                     <span class="title2" data-ani="slideinup" data-ani-delay="0.5s">Collection</span>
@@ -353,7 +353,7 @@
                     <div class="hero-inner">
                         <div class="container">
                             <div class="hero-style2">
-                                <span class="sub-title" data-ani="slideinup" data-ani-delay="0.2s"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="shape">100% Natural</span>
+                                <span class="sub-title text-white" data-ani="slideinup" data-ani-delay="0.2s"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="shape">100% Natural</span>
                                 <h1 class="hero-title">
                                     <span class="title1" data-ani="slideinup" data-ani-delay="0.4s">Our Organic</span>
                                     <span class="title2" data-ani="slideinup" data-ani-delay="0.5s">Collection</span>
@@ -367,7 +367,7 @@
                             </div>
                         </div>
                         <div class="hero-img" data-ani="slidebottomright" data-ani-delay="0.1s">
-                            <img src="assets/img/product/Lavender.png" alt="Image" style="height: 750px;">
+                            <img src="assets/img/product/ec-kennal2.png" alt="Image" style="height: 600px;">
                         </div>
                         <div class="hero-shape1" data-ani="slideinup" data-ani-delay="0.7s">
                             <img src="assets/img/hero/hero_shape_1_1.png" alt="shape">
