--- a/products.html
+++ b/products.html
@@ -302,9 +302,9 @@
                             <img src="assets/img/product/ec-soap.png" alt="Image" style="height: 400px;">
                         </div>
                         <div class="box-content" data-border="#D1EDD2">
-                            <span class="box-heading">Organic Only</span>
+                            <span class="box-heading">Grooming With Goodness. Clean With Care.</span>
                             <h3 class="box-title">Eco-Cleanser Pet <b>Soap</b></h3>
-                            <p class="box-text">30% OFF FOR THIS MONTH</p>
+                            <p class="box-text">Eco Cleanser brings you a line of all-natural, eco-friendly grooming products <br>formulated to pamper your pets while protecting the planet.</p>
                             <a href="shop-details.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
                         </div>
                     </div>
@@ -318,8 +318,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-5 col-md-7">
                     <div class="title-area text-center">
-                        <span class="sub-title"><img src="assets/img/icon/paw-prints.svg" alt="Icon" style="height: 70px;"></span>
-                        <h2 class="sec-title text-white">Savor the Purity, Taste The Difference!</h2>
+                        <span class="sub-title"><img src="assets/img/icon/paw-prints.svg" alt="Icon" style="height: 70px;">Gentle Cleanse, Pure Comfort</span>
+                        <h2 class="sec-title text-white">Eco Cleanser Pet Soap</h2>
                     </div>
                 </div>
             </div>
@@ -349,7 +349,7 @@
                                 <img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="">
                             </div>
                             <div class="media-body">
-                                <div class="box-title">Biodynamic Food</div>
+                                <div class="box-title">Vet-Approved</div>
                                 <p class="box-text">Our products are certified by reputable organic.</p>
                             </div>
                         </div>
@@ -367,7 +367,7 @@
                                 <img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="">
                             </div>
                             <div class="media-body">
-                                <div class="box-title">Secured Payment</div>
+                                <div class="box-title">Recommended for Dogs, Cats & Puppies</div>
                                 <p class="box-text">Our products are certified by reputable organic.</p>
                             </div>
                         </div>
@@ -407,9 +407,9 @@
                             <img src="assets/img/product/ec-shampo.png" alt="Image" style="height: 400px;">
                         </div>
                         <div class="box-content" data-border="#D1EDD2">
-                            <span class="box-heading">Organic Only</span>
+                            <span class="box-heading">Nourish the Coat, Soothe the Skin</span>
                             <h3 class="box-title">Eco-Cleanser Pet <b>Shampo</b></h3>
-                            <p class="box-text">30% OFF FOR THIS MONTH</p>
+                            <p class="box-text">Made with coconut oil, lavender extract, and apple cider vinegar, this shampoo deeply cleanses <br>while moisturizing your pet’s skin.It's perfect for regular use, even for pets prone to allergies.</p>
                             <a href="shop-details.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
                         </div>
                     </div>
@@ -423,8 +423,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-5 col-md-7">
                     <div class="title-area text-center">
-                        <span class="sub-title"><img src="assets/img/icon/paw-prints.svg" alt="Icon" style="height: 70px;"></span>
-                        <h2 class="sec-title text-white">Savor the Purity, Taste The Difference!</h2>
+                        <span class="sub-title"><img src="assets/img/icon/paw-prints.svg" alt="Icon" style="height: 70px;">Gentle Cleanse, Pure Comfort</span>
+                        <h2 class="sec-title text-white">Eco Cleanser Pet Shampoo</h2>
                     </div>
                 </div>
             </div>
@@ -454,7 +454,7 @@
                                 <img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="">
                             </div>
                             <div class="media-body">
-                                <div class="box-title">Biodynamic Food</div>
+                                <div class="box-title">Vet-Approved</div>
                                 <p class="box-text">Our products are certified by reputable organic.</p>
                             </div>
                         </div>
@@ -472,7 +472,7 @@
                                 <img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="">
                             </div>
                             <div class="media-body">
-                                <div class="box-title">Secured Payment</div>
+                                <div class="box-title">Recommended for Dogs, Cats & Puppies</div>
                                 <p class="box-text">Our products are certified by reputable organic.</p>
                             </div>
                         </div>
@@ -512,9 +512,9 @@
                             <img src="assets/img/product/ec-kennal2.png" alt="Image" style="height: 400px;">
                         </div>
                         <div class="box-content" data-border="#D1EDD2">
-                            <span class="box-heading">Organic Only</span>
+                            <span class="box-heading">A Fresh, Hygienic Space for Your Pet</span>
                             <h3 class="box-title">Eco-Cleanser Pet <b>Kennal Wash</b></h3>
-                            <p class="box-text">30% OFF FOR THIS MONTH</p>
+                            <p class="box-text">Eco Cleanser Kennel Wash is an all-purpose surface disinfectant <br>designed to eliminate odors and germs from pet crates, bedding,<br>floors, and play areas. Infused with lemon, eucalyptus, and tea tree oils,<br>it keeps your pet’s space fresh and safe—naturally.</p>
                             <a href="shop-details.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
                         </div>
                     </div>
@@ -528,8 +528,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-5 col-md-7">
                     <div class="title-area text-center">
-                        <span class="sub-title"><img src="assets/img/icon/paw-prints.svg" alt="Icon" style="height: 70px;"></span>
-                        <h2 class="sec-title text-white">Savor the Purity, Taste The Difference!</h2>
+                        <span class="sub-title"><img src="assets/img/icon/paw-prints.svg" alt="Icon" style="height: 70px;">Gentle Cleanse, Pure Comfort</span>
+                        <h2 class="sec-title text-white">Eco Cleanser Kennel Wash</h2>
                     </div>
                 </div>
             </div>
@@ -559,7 +559,7 @@
                                 <img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="">
                             </div>
                             <div class="media-body">
-                                <div class="box-title">Biodynamic Food</div>
+                                <div class="box-title">Vet-Approved</div>
                                 <p class="box-text">Our products are certified by reputable organic.</p>
                             </div>
                         </div>
@@ -577,7 +577,7 @@
                                 <img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="">
                             </div>
                             <div class="media-body">
-                                <div class="box-title">Secured Payment</div>
+                                <div class="box-title">Recommended for Dogs, Cats & Puppies</div>
                                 <p class="box-text">Our products are certified by reputable organic.</p>
                             </div>
                         </div>
